2003-03-11  Matthias Clasen  <maclas@gmx.de>

	* io-ico.c (DecodeHeader): Calculate LineWidth for 16bpp from
	width, like for the other depths.  (noticed by Marijn Ros)

2003-03-08  Matthias Clasen  <maclas@gmx.de>

	Bug #107664 continued: 
	
	* io-xpm.c (find_color): Fix 0/FALSE confusion
	* gdk-pixbuf.c (gdk_pixbuf_get_has_alpha): Fix -1/gboolean confusion.

2003-03-06  Matthias Clasen  <maclas@gmx.de>

	* io-gif.c (gif_read): Fix 0/FALSE confusion (#107664, Morten Welinder)

2003-02-20  Matthias Clasen  <maclas@gmx.de>

	* io-gif-animation.c (gdk_pixbuf_gif_anim_frame_composite): 
	Always clear the initial frame and "disposed" areas with
	transparent pixels, no matter whether the frame has transparency
	or not.  (#55502)

2003-02-18  Matthias Clasen  <maclas@gmx.de>

	* io-tga.c (pixbuf_flip_row): 
	(pixbuf_flip_vertically): Auxiliary functions used to implement
	support for arbitrary origins.
	(parse_data_for_row_pseudocolor): 
	(parse_data_for_row_truecolor): 
	(parse_data_for_row_grayscale): 
	(parse_data_for_row): 
	(fill_in_context): Remove the check for upper-left origin.
	(parse_rle_data): Support arbitrary origins. (#105912)

	* io-tga.c (fread_check): 
	(fseek_check): 
	(get_header_from_file): 
	(get_colormap_from_file): 
	(get_image_pseudocolor): 
	(swap_channels_pixbuf): 
	(get_image_truecolor): 
	(get_image_grayscale): 
	(gdk_pixbuf__tga_load): Remove the non-incremental load
	implementation, since we have generic_image_load () now.

	(gdk_pixbuf__tga_stop_load): Fix a potential crash discovered by
	pixbuf-lowmem.

2003-02-14  Matthias Clasen  <maclas@gmx.de>

	* io-tga.c (try_preload): 
	(gdk_pixbuf__tga_load): Actually reject images with origin
	not in the upper-left corner.  (#105912)  

2003-02-06  Matthias Clasen  <maclas@gmx.de>

	* queryloaders.c (query_module): Better error message if
	module_open() fails.  (#105349, Tim Mooney)

Mon Jan 27 17:10:30 2003  Owen Taylor  <otaylor@redhat.com>
 
 	* Makefile.am (gdk-pixbuf.loaders): Rewrite to run